[package]
name = "kvs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "0.11.0"
clap = {version = "4.0.22", features = ["derive"]}
failure = "0.1.8"
predicates = "1.0.0"
serde = {version = "1.0.147", features = ["derive"]}
serde_json = "1.0.88"
tempfile = "3.3.0"
walkdir = "2.3.2"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
